# pgai-voicebot-starter

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  scenarios.yaml
calls/final_recordings/: s01-new-patient-appointment.oga  s02-weekend-appointment-request.oga  s03-reschedule-appointment.oga  s04-cancel-appointment.oga  s05-medication-refill.oga  s06-insurance-question.oga  s07-office-logistics.oga  s08-ambiguous-symptoms.oga  s09-emergency-escalation.oga  s10-correction-interruption.oga
calls/final_transcripts/: s01-new-patient-appointment.txt  s02-weekend-appointment-request.txt  s03-reschedule-appointment.txt  s04-cancel-appointment.txt  s05-medication-refill.txt  s06-insurance-question.txt  s07-office-logistics.txt  s08-ambiguous-symptoms.txt  s09-emergency-escalation.txt  s10-correction-interruption.txt
reports/: BUG_REPORT.md  BUG_REPORT_TEMPLATE.md
scripts/: convert_recordings.sh
src/patient_bot/: agent.py  dispatch_call.py  reporting.py  run_batch.py  scenarios.py
