[project]
name = "pgai-voicebot"
version = "0.1.0"
description = "Patient simulator voice bot for the Pretty Good AI engineering challenge"
requires-python = ">=3.10,<3.13"
dependencies = [
    "livekit-agents[openai]~=1.5",
    "livekit-api>=1.0.5",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
